frontend/test/should_pass/set_node_edge2.grg
using set_model_003;

rule addToSet {
	-n:E->; -m:Edge->; -u:UEdge-;
	
	modify {
		eval {
			n.edgeSet = n.edgeSet | set<Edge>{ n };
			n.eSet = n.eSet | set<E>{ n };
			n.uSet = n.uSet | set<UEdge>{ u };
		}
	}
}

test containedInSet {
	-n:E->; -u:UEdge-;
	
	if { n in n.edgeSet; }
	if { n in n.eSet; }
	if { u in n.uSet; }
}

rule removeFromSet {
	-n:E->; -m:Edge->; -u:UEdge-;
	
	modify {
		eval {
			n.edgeSet = n.edgeSet \ set<Edge>{ n };
			n.eSet = n.eSet \ set<E>{ n };
			n.uSet = n.uSet \ set<UEdge>{ u };
		}
	}
}

// This clones the sets
rule assignSetToSet {
	-n:E->; -m:E->; -u:UEdge-;
		
	modify {
		eval {
			n.edgeSet = m.edgeSet;
			m.eSet = n.eSet;
			n.uSet = m.uSet;
		}
	}
}

rule anonymousSet {
	-n:E->; -m:E->; -u:UEdge-;
	
	if { n in set<Edge>{ n, m }; }
	if { n in set<E>{ n, m }; }
	if { u in set<UEdge>{ u }; }

	modify {
		eval {
			n.val = (n in set<Edge>{n, m}) ? 1 : 0;
			m.val = (u in set<UEdge>{u}) ? 1 : 0;
		}
	}
}

rule setSize {
	-n:E->; -u:UEdge-;
	
	if { n.edgeSet.size()==42; }
	if { n.eSet.size()==42; }
	if { n.uSet.size()==42; }
	
	modify {
		eval {
			n.val = n.edgeSet.size();
			n.val = n.eSet.size();
			n.val = n.uSet.size();
		}
	}
}

rule addToSetRemoveFromSet {
	-n:E->; -m:E->; -u:UEdge-;
	
	modify {
		eval {
			n.edgeSet = (m.edgeSet | set<Edge>{ n, m }) \ set<Edge>{ m };
			n.uSet = (m.uSet | set<UEdge>{ u }) \ set<UEdge>{ u };
		}
	}
}

rule storage {
	-n:E->;
	-m:E{n.eSet}->;
	-l:Edge{n.edgeSet}->;
	-k:UEdge{m.uSet}-;
	
	modify {
	}
}
